Update footer copyright information and add dynamic year display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -826,6 +826,19 @@ body.active { overflow: hidden; }
   color: var(--satin-sheen-gold);
 }
 
+.copyright {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    gap: 5px;               
+    white-space: nowrap;    
+}
+
+.copyright a{
+    color: var(--satin-sheen-gold);
+}
+
+
 
 
 
